[gd_scene load_steps=12 format=3 uid="uid://dscy50w1eoxkw"]

[ext_resource type="Script" path="res://Scenes/Characters/Player/Player.gd" id="1_4fk2y"]
[ext_resource type="PackedScene" uid="uid://bete2cv4wu0df" path="res://Weapons/Pistol/Weapon.tscn" id="2_afsnp"]
[ext_resource type="AudioStream" uid="uid://c0pbg3oqcyshv" path="res://Sounds/damage.wav" id="3_c6bm0"]
[ext_resource type="AudioStream" uid="uid://0exww3hbmjim" path="res://Sounds/weapon.wav" id="3_xeh60"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4k82b"]
size = Vector2(83, 105)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vc73h"]
size = Vector2(83, 105)

[sub_resource type="Animation" id="Animation_lwqoi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(83, 105)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-42, -53)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(35, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Weapon:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ColorRect:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_rocv6"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.125, 1),
"update": 0,
"values": [0.0, 1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-42, -53)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(83, 105)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Weapon:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.6),
"transitions": PackedFloat32Array(2, 1, 0.297302, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(7, 8), Vector2(15, 22), Vector2(19, 16), Vector2(30, 29)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Weapon:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.6),
"transitions": PackedFloat32Array(2, 1, 0.297302, 1, 1),
"update": 0,
"values": [0.0, 0.174533, 0.349066, -0.174533, 0.174533]
}

[sub_resource type="Animation" id="Animation_474lw"]
resource_name = "hit"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.6, 0.7),
"transitions": PackedFloat32Array(2, 0.554785, 1, 1, 1),
"update": 0,
"values": [0.0, -0.261799, 0.174533, -0.0872665, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.6, 0.7),
"transitions": PackedFloat32Array(2, 0.554785, 1, 1, 1),
"update": 0,
"values": [0.0, -0.565487, 0.42237, -0.282743, 0.0]
}

[sub_resource type="Animation" id="Animation_esy23"]
resource_name = "move"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(2.00001, 2, 2),
"update": 0,
"values": [Vector2(83, 105), Vector2(83, 95), Vector2(83, 105)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(2, 2, 2),
"update": 0,
"values": [Vector2(-42, -53), Vector2(-42, -43), Vector2(-42, -53)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(2, 2, 2),
"update": 0,
"values": [Vector2(35, 1), Vector2(35, -5), Vector2(35, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fxuw6"]
_data = {
"RESET": SubResource("Animation_lwqoi"),
"death": SubResource("Animation_rocv6"),
"hit": SubResource("Animation_474lw"),
"move": SubResource("Animation_esy23")
}

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("weapon")]
z_index = 1
script = ExtResource("1_4fk2y")
weapon = NodePath("Weapon")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -42.0
offset_top = -53.0
offset_right = 41.0
offset_bottom = 52.0
pivot_offset = Vector2(42, 53)
color = Color(0.231373, 0.364706, 0.788235, 1)

[node name="PhysicsCollider" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_4k82b")

[node name="DamageCollider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageCollider"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_vc73h")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fxuw6")
}

[node name="Weapon" parent="." instance=ExtResource("2_afsnp")]
shootSpeed = 3000.0
damage = 3.0

[node name="Immunity" type="Timer" parent="."]
one_shot = true

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_c6bm0")

[node name="WeaponSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_xeh60")
